...

package com.pseandroid2.dailydata.util.ui

object Routes {

    //bottom bar
    const val PROJECT = "project"
    const val TEMPLATES = "templates"
    const val SERVER = "server"

    //project
    const val CREATION = "creation"
    const val OVERVIEW = "overview"
...
