...
                color = viewModel.wallpaper,
                label = "Change Wallpaper",
                onClick = { viewModel.onEvent(ProjectDataSettingsScreenEvent.OnShowWallpaperDialog(true)) }
            )
            if(viewModel.isAdmin) {
                ListInput(
                    label = "Create Link",
                    mainIcon = Icons.Default.AccountCircle,
                    onClick = { viewModel.onEvent(ProjectDataSettingsScreenEvent.OnCreateLink) },
                    onClickItem = { viewModel.onEvent(ProjectDataSettingsScreenEvent.OnMemberRemove(index = it)) },
                    elements = viewModel.members.map { "${it.name} #${it.id}" } //TODO("Repository if the user is listed : make function to get user")
                )
            }
...
